@@ -668,7 +668,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="label57">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">No artificial intelligence is enabled in the current game.</property>
+	      <property name="label" translatable="yes">There are no artificial intelligence players.</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
