@@ -1,3 +1,9 @@
+2006-12-31  Robert Ancell  <bob27@users.sourceforge.net>
+	* Rephrased AI information dialog again...
+
+2006-12-30  Robert Ancell  <bob27@users.sourceforge.net>
+	* Set main window title to 'Chess - game name'
+
 2006-12-29  Andreas Røsdal  <andreasr@gnome.org>
 
 	* glade/glchess.glade: Rephrase error message when no AIs are active,
